<resources>
    <string name="app_name">aleks_vitomskov_shop</string>
	<string name="checkout_header">Оформление заказа</string>
    <string name="checkout_price">Цена без скидки</string>
    <string name="checkout_discount">Размер скидки</string>
    <string name="checkout_sum">Итоговая цена</string>
    <string name="checkout_pay">Оплатить</string>
    <string name="checkout_phone">Телефон</string>
    <string name="checkout_middleName">Отчество</string>
    <string name="checkout_firstName">Имя</string>
    <string name="checkout_secondName">Фамилия</string>
    <string name="checkout_phoneHelp">89999999999 или +79999999999</string>
</resources>
