<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/checkoutHeader"
        android:layout_width="265dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:text="@string/checkout_header"
        android:textColor="#000"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkoutPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/checkout_price"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkoutHeader" />

    <TextView
        android:id="@+id/checkoutPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkoutPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkoutPrice" />

    <TextView
        android:id="@+id/checkoutDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/checkout_discount"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPrice" />

    <TextView
        android:id="@+id/checkoutDiscountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkoutDiscount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkoutDiscount" />

    <TextView
        android:id="@+id/checkoutSumValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="0"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/checkoutSum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkoutSum" />

    <TextView
        android:id="@+id/checkoutSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:text="@string/checkout_sum"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkoutDiscount" />

    <EditText
        android:id="@+id/chechoutPersonSecondName"
        android:layout_width="293dp"
        android:layout_height="43dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/checkout_secondName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkoutSum" />

    <EditText
        android:id="@+id/checkoutPersonFirstName"
        android:layout_width="291dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Имя"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chechoutPersonSecondName" />

    <EditText
        android:id="@+id/buttonPersonMiddleName"
        android:layout_width="291dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/checkout_middleName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPersonFirstName" />

    <EditText
        android:id="@+id/checkoutPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/checkout_phone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPersonMiddleName" />

    <Button
        android:id="@+id/checkoutPayButton"
        android:layout_width="363dp"
        android:layout_height="91dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="#F44336"
        android:text="@string/checkout_pay"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkoutPhone"
        app:layout_constraintVertical_bias="0.898" />


</androidx.constraintlayout.widget.ConstraintLayout>